- default parameter heuristics/coefdiving/maxlpiterquot changed to 0.05
- default parameter heuristics/fracdiving/maxlpiterquot changed to 0.05
- default parameter heuristics/guideddiving/maxlpiterquot changed to 0.05
- default parameter heuristics/linesearchdiving/maxlpiterquot changed to 0.05
- default parameter heuristics/pscostdiving/maxlpiterquot changed to 0.05

features:
- aging and cleanup now only remove non-basic columns and basic rows, s.t. resolving can be applied with 0 simplex
  iterations
- calling SCIPaddCut() with forcecut=TRUE will add the cut to the LP even if it is redundant
- command line history in interactive shell now only stores "useful" commands
- probing is now also possible in presolving stage
- it is now possible to create subnodes in probing and use backtracking to undo probing changes
- it is now possible to interrupt and continue presolving
- bounds of variables are included in the feasibility checks for solutions
- support for barrier algorithm
- added TSP example in examples/TSP
- SCIPaddVarImplication() now also adds variable lower and upper bounds, if the implied variable is non-binary

fixed bugs:
- fixed bug in MPS file reader
- fixed bugs in separation store with single coefficient cuts that are converted into bound changes
- at least one cut per separation round is added to the LP to avoid cycling, even if the cut is redundant
- removed bug with applying reduced cost strengthening before pricing in all necessary variables
- negated variables must also be reset in SCIPvarInitSolve()
- removed bug with objective norm calculation and column variables not in the LP (pricing)
- removed conflict analysis of infeasible diving LP if pricing is activated
- removed bug in knapsack constraint handler with merging multiple items if more than two items of the same
  variable appear in the constraint
- fixed bug in SCIProwCalcIntegralScalar() with rows consisting of only continuous variables (appeared in